Remove placeholder image and footer

--- a/index.html
+++ b/index.html
@@ -192,18 +192,7 @@ date,jobs
 
     <h1>Retail employment, in millions (2008-2014)</h1>
 
-    <div id="graphic"><img src="fallback.png" alt="[Chart]" /></div>
-
-    <div class="footnotes">
-        <h4>Note</h4>
-        <p>Figures for February and March 2014 are preliminary.</p>
-    </div>
-
-    <div class="footer">
-        <p>Source: Bureau of Labor Statistics</p>
-        <p>Credit: NPR</p>
-    </div>
-
+    <div id="graphic"></div>
 
     <script src="js/lib/jquery.js" type="text/javascript"></script>
     <script src="js/lib/d3.v3.min.js" type="text/javascript"></script>
