Update error message

--- a/index.html
+++ b/index.html
@@ -105,6 +105,15 @@
         rect {
           fill: steelblue;
         }
+
+        .error {
+            display: inline-block;
+            padding: 10px;
+            margin: 10px 0;
+            height: 20px;
+            border-radius: 5px;
+            border: 1px solid red;
+        }
     </style>
 
 </head>
