--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
         rect:hover {
             background-color: lightsteelblue;
-            opacity: 0.9;
+            opacity: 0.8;
         }
         #graphic {
             display: flex;
@@ -113,6 +113,21 @@
             height: 20px;
             border-radius: 5px;
             border: 1px solid red;
+        }
+
+        div.tooltip {
+            position: absolute;
+            right: 25px;
+            top:25px;
+            text-align: center;
+            width: 100px;
+            height: 16px;
+            padding: 2px;
+            font: 12px sans-serif;
+            background: lightsteelblue;
+            border: 0px;
+            border-radius: 8px;
+            pointer-events: none;
         }
     </style>
 
